<resources>
    <string name="app_name">Tugas</string>
    <string name="title">PENDAFTARAN</string>
    <string name="nama_d">Nama Depan</string>
    <string name="nama_b">Nama Belakang</string>
    <string name="tempat_L">Tempat Lahir</string>
    <string name="tgl_L">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="jns_kel">Jenis Kelamin</string>
    <string name="lk_lk">Laki-Laki</string>
    <string name="pr">Perempuan</string>
    <string name="agama">Agama</string>
    <string name="islam">Islam</string>
    <string name="kristen">Kristen</string>
    <string name="katolik">Katolik</string>
    <string name="hindu">Hindu</string>
    <string name="budha">Budha</string>
    <string name="konghucu">Konghucu</string>
    <string name="alr_Keper">Aliran Kepercayaan</string>
    <string name="telpon">Telepon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Msk_Pass">Masukkan Password Kembali</string>
    <string name="kembali">Kembali</string>
    <string name="daftar">Daftar</string>
    <string name="invalid_name">Masukkan Nama Depan</string>
    <string name="invalid_nameBelakang">Masukkan Nama Belakang</string>
    <string name="invalid_telepon">Masukkan Nomer Telepon</string>
    <string name="invalid_tanggal">Masukkan Tanggal Lahir</string>
    <string name="invalid_tempat">Masukkan Tempat Lahir</string>
    <string name="invalid_alamat">Masukkan Alamat</string>
    <string name="invalid_email">Masukkan Email</string>
    <string name="invalid_password">Masukkan Password</string>
    <string name="invalid_confirm_password">Masukkan Password Kembali</string>

</resources>
