<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/background1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="40dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/title"
                android:textSize="25sp"

                android:textStyle="bold|italic">


            </TextView>


            <TableLayout
                android:id="@+id/edit_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/te_nama_d"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:width="180dp"
                            android:hint="@string/nama_d">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/te_nama_b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:width="180dp"
                            android:hint="@string/nama_b">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>
                </TableRow>


            </TableLayout>

            <TableLayout
                android:id="@+id/edit_lahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    >

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/te_temp_l"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:width="130dp"
                            android:hint="@string/tempat_L">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText

                            android:id="@+id/te_tgl_lhr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:width="230dp"
                            android:clickable="true"
                            android:focusable="false"
                            android:hint="@string/tgl_L"
                            android:onClick="showDatePickerDialog"
                            >

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>


                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/edit_Almt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/te_alamt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="150dp"
                        android:hint="@string/alamat">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>
            </TableLayout>


            <TableLayout
                android:id="@+id/jns_KelT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/jns_l"
                    android:paddingBottom="10dp"
                    android:text="@string/jns_kel">

                </TextView>

                <RadioGroup android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/R_lk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="200dp"
                        android:text="@string/lk_lk" />

                    <RadioButton
                        android:id="@+id/R_pr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/pr" />

                </RadioGroup>


                <TextView
                    android:id="@+id/textagama"
                    android:paddingBottom="10dp"
                    android:text="@string/agama">

                </TextView>


                <RadioGroup>


                    <RadioButton

                        android:id="@+id/islam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/islam" />

                    <RadioButton
                        android:id="@+id/kristen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kristen" />


                    <RadioButton
                        android:id="@+id/khatolik"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/katolik" />

                    <RadioButton
                        android:id="@+id/hindu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/hindu" />


                    <RadioButton
                        android:id="@+id/budha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/budha" />

                    <RadioButton
                        android:id="@+id/konghucu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/konghucu" />

                    <RadioButton
                        android:id="@+id/alr_Keper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alr_Keper" />


                </RadioGroup>


            </TableLayout>


            <TableLayout
                android:id="@+id/telpT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/te_telp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telpon"
                        android:inputType="number"
                        >

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </TableLayout>

            <TableLayout
                android:id="@+id/emailT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/te_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


            </TableLayout>

            <TableLayout
                android:id="@+id/passT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/te_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:ems="10"
                        android:inputType="textPassword">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


            </TableLayout>

            <TableLayout
                android:id="@+id/Mskn_PassT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/te_pass_kem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Msk_Pass"
                        android:inputType="textPassword">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/kembali"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="150dp"

                    android:background="@drawable/custom2"
                    android:text="@string/kembali" />

                <Button
                    android:id="@+id/daftar"
                    android:width="150dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:background="@drawable/custom2"
                    android:text="@string/daftar" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>